From np.ndarray to pd.DataFrane

--- a/assignment6/temp.ipynb
+++ b/assignment6/temp.ipynb
@@ -2,23 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.1  0.05 0.   0.   0.2  0.25 0.4 ]\n",
-      " [0.   0.   0.   0.5  0.5  0.   0.  ]\n",
-      " [0.1  0.1  0.1  0.1  0.2  0.3  0.1 ]\n",
-      " [0.   0.3  0.   0.3  0.4  0.   0.  ]\n",
-      " [0.1  0.4  0.   0.1  0.2  0.2  0.  ]]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>math</th>\n",
+       "      <th>physics</th>\n",
+       "      <th>computer</th>\n",
+       "      <th>cpu</th>\n",
+       "      <th>memory</th>\n",
+       "      <th>disk</th>\n",
+       "      <th>cache</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   math  physics  computer  cpu  memory  disk  cache\n",
+       "0   0.1     0.05       0.0  0.0     0.2  0.25    0.4\n",
+       "1   0.0     0.00       0.0  0.5     0.5  0.00    0.0\n",
+       "2   0.1     0.10       0.1  0.1     0.2  0.30    0.1\n",
+       "3   0.0     0.30       0.0  0.3     0.4  0.00    0.0\n",
+       "4   0.1     0.40       0.0  0.1     0.2  0.20    0.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# List of columns\n",
+    "cols = [\"math\", \"physics\", \"computer\", \"cpu\", \"memory\", \"disk\", \"cache\"]\n",
     "\n",
     "# Define the term/document table\n",
     "table = np.array([[2, 1, 0, 0, 4, 5, 8],\n",
@@ -32,9 +123,9 @@
     "\n",
     "# Divide each element in the table by its corresponding total\n",
     "normalized_table = table / totals[:, np.newaxis]\n",
-    "\n",
+    "normalized_table_df = pd.DataFrame(normalized_table, columns=cols)\n",
     "# Print the normalized table\n",
-    "print(normalized_table)\n"
+    "normalized_table_df"
    ]
   }
  ],
