--- a/assignment6/temp.ipynb
+++ b/assignment6/temp.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4   0.1     0.40       0.0  0.1     0.2  0.20    0.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,6 +135,273 @@
     "# Print the normalized table\n",
     "normalized_table_df"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of columns\n",
+    "cols = [\"math\", \"physics\", \"computer\", \"cpu\", \"memory\", \"disk\", \"cache\"]\n",
+    "\n",
+    "# Define the term/document table\n",
+    "table = np.array([[2, 1, 0, 0, 4, 5, 8],\n",
+    "                  [0, 0, 0, 5, 5, 0, 0],\n",
+    "                  [2, 2, 2, 2, 4, 6, 2],\n",
+    "                  [0, 3, 0, 3, 4, 0, 0],\n",
+    "                  [3, 12, 0, 3, 6, 6, 0]])\n",
+    "\n",
+    "\n",
+    "total_num_docs = table.shape[0]\n",
+    "# Calculate the inverse document frequency for each term \n",
+    "if_term = np.count_nonzero(table, axis=0)\n",
+    "\n",
+    "# Calculate the idf for each term\n",
+    "idf_term = np.log2(total_num_docs / if_term)\n",
+    "\n",
+    "\n",
+    "# for i, ift in enumerate(if_term):\n",
+    "#     print(f\"number of documents containing the term '{cols[i]}': {ift} | IDF = {idf_term[i]}\") \n",
+    "    \n",
+    "terms_df = pd.DataFrame(table, columns=cols)\n",
+    "\n",
+    "term_metrics_dict = {'term': cols, \n",
+    "                     'if': if_term, \n",
+    "                     'idf': idf_term}\n",
+    "term_metrics_df = pd.DataFrame(term_metrics_dict)\n",
+    "# Calculate and display the weighted term frequencies\n",
+    "weighted_terms_df = terms_df * (idf_term + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>term</th>\n",
+       "      <th>if</th>\n",
+       "      <th>idf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>math</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.736966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>physics</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.321928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>computer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.321928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cpu</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.321928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>memory</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>disk</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.736966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>cache</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.321928</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       term  if       idf\n",
+       "0      math   3  0.736966\n",
+       "1   physics   4  0.321928\n",
+       "2  computer   1  2.321928\n",
+       "3       cpu   4  0.321928\n",
+       "4    memory   5  0.000000\n",
+       "5      disk   3  0.736966\n",
+       "6     cache   2  1.321928"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "term_metrics_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>math</th>\n",
+       "      <th>physics</th>\n",
+       "      <th>computer</th>\n",
+       "      <th>cpu</th>\n",
+       "      <th>memory</th>\n",
+       "      <th>disk</th>\n",
+       "      <th>cache</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.473931</td>\n",
+       "      <td>1.321928</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.684828</td>\n",
+       "      <td>18.575425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.609640</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.473931</td>\n",
+       "      <td>2.643856</td>\n",
+       "      <td>6.643856</td>\n",
+       "      <td>2.643856</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>10.421794</td>\n",
+       "      <td>4.643856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.965784</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.965784</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.210897</td>\n",
+       "      <td>15.863137</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.965784</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>10.421794</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       math    physics  computer       cpu  memory       disk      cache\n",
+       "0  3.473931   1.321928  0.000000  0.000000     4.0   8.684828  18.575425\n",
+       "1  0.000000   0.000000  0.000000  6.609640     5.0   0.000000   0.000000\n",
+       "2  3.473931   2.643856  6.643856  2.643856     4.0  10.421794   4.643856\n",
+       "3  0.000000   3.965784  0.000000  3.965784     4.0   0.000000   0.000000\n",
+       "4  5.210897  15.863137  0.000000  3.965784     6.0  10.421794   0.000000"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_terms_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
