--- a/assignment6/temp.ipynb
+++ b/assignment6/temp.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4   0.1     0.40       0.0  0.1     0.2  0.20    0.0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "6     cache   2  1.321928"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "4  5.210897  15.863137  0.000000  3.965784     6.0  10.421794   0.000000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,10 +398,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\togru\\AppData\\Local\\Temp\\ipykernel_6028\\558800666.py:20: RuntimeWarning: divide by zero encountered in log2\n",
+      "  term_idfs = np.log2(term_freqs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>math</th>\n",
+       "      <th>physics</th>\n",
+       "      <th>computer</th>\n",
+       "      <th>cpu</th>\n",
+       "      <th>memory</th>\n",
+       "      <th>disk</th>\n",
+       "      <th>cache</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.501396</td>\n",
+       "      <td>2.765247</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.890333</td>\n",
+       "      <td>12.537997</td>\n",
+       "      <td>20.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.892083</td>\n",
+       "      <td>11.112916</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.501396</td>\n",
+       "      <td>5.530493</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.556833</td>\n",
+       "      <td>8.890333</td>\n",
+       "      <td>15.045597</td>\n",
+       "      <td>5.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.295740</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.335250</td>\n",
+       "      <td>8.890333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.752095</td>\n",
+       "      <td>33.182958</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.335250</td>\n",
+       "      <td>13.335500</td>\n",
+       "      <td>15.045597</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       math    physics  computer       cpu     memory       disk  cache\n",
+       "0  2.501396   2.765247       0.0  0.000000   8.890333  12.537997   20.8\n",
+       "1  0.000000   0.000000       0.0  8.892083  11.112916   0.000000    0.0\n",
+       "2  2.501396   5.530493       2.0  3.556833   8.890333  15.045597    5.2\n",
+       "3  0.000000   8.295740       0.0  5.335250   8.890333   0.000000    0.0\n",
+       "4  3.752095  33.182958       0.0  5.335250  13.335500  15.045597    0.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List of columns\n",
+    "cols = [\"math\", \"physics\", \"computer\", \"cpu\", \"memory\", \"disk\", \"cache\"]\n",
+    "\n",
+    "# Define the term/document table\n",
+    "table = np.array([[2, 1, 0, 0, 4, 5, 8],\n",
+    "                  [0, 0, 0, 5, 5, 0, 0],\n",
+    "                  [2, 2, 2, 2, 4, 6, 2],\n",
+    "                  [0, 3, 0, 3, 4, 0, 0],\n",
+    "                  [3, 12, 0, 3, 6, 6, 0]])\n",
+    "\n",
+    "# Total occurrences of each term\n",
+    "total_num_terms = np.sum(table, axis=0)\n",
+    "\n",
+    "# Term frequency table           \n",
+    "term_freqs = table / total_num_terms\n",
+    "\n",
+    "# Calculate the probability of a term occurring in a document\n",
+    "term_idfs = np.log2(term_freqs)\n",
+    "\n",
+    "# Replace inf values with 0\n",
+    "term_idfs[np.isinf(term_idfs)] = 0\n",
+    "\n",
+    "# Average information value of each term\n",
+    "info_val = (-1.0 * term_freqs) * term_idfs\n",
+    "\n",
+    "# Average information value for each term\n",
+    "ave_info = np.sum(info_val, axis=0)\n",
+    "\n",
+    "# Signal weights for each term\n",
+    "signal_weights = table * (np.log2(total_num_terms) - ave_info) \n",
+    "\n",
+    "# terms_df = pd.DataFrame(table, columns=cols)\n",
+    "\n",
+    "signal_weights_df = pd.DataFrame(signal_weights, columns=cols)\n",
+    "signal_weights_df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.8073549220576042"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log2(2/7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2857142857142857"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2/7"
+   ]
   }
  ],
  "metadata": {
